--- a/style/partials/_variables.scss
+++ b/style/partials/_variables.scss
@@ -8,7 +8,8 @@ $sixth-color: #CED7E1;
 $seventh-color: #50E3C2;
 $eight-color: #222326;
 $nineth-color: #37383C;
-$tenth-color: #6B7989 ;
+$tenth-color: #6B7989;
+$eleventh-color: #F3F5F8; 
 
 // font styles
 $first-font: 'Montserrat', sans-serif;
