--- a/style/partials/_footer.scss
+++ b/style/partials/_footer.scss
@@ -1,7 +1,32 @@
 footer {
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
+    border-bottom: solid 5px $first-color;
+  div.ctn-footer {
+    font-family: $second-font;
+    color: $fourth-color;
+    letter-spacing: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+    height: 196px;  
+        p.share {
+            font-size: 15px;
+            padding-top: 47px;
+            padding-bottom: 0;
+        }
+        div.social {
+            display: flex;
+            flex-direction: row;
+            padding-bottom: 40px;
+            padding-top: 22px;
+            i {
+                color: $sixth-color;
+                margin: 5px;
+            }
+        }
+        p {
+            font-size: 14px;
+            line-height: 20px;
+            padding-bottom: 23px;
+        }
+  }
 }
