--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -59,6 +59,10 @@ section.trending {
     font-family: $first-font;
     color: $first-color;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
     p.title {
         font-size: 18px;
         line-height: 25px;
@@ -66,6 +70,8 @@ section.trending {
     }
     p.options {
         padding-bottom: 35px;
+        width: 80%;
+
         span {
             font-size: 14px;
             line-height: 25px;
@@ -76,10 +82,9 @@ section.trending {
 
     }
   }
-}
+
 
 section.results {
-    display: none;
 }
 
 section.error {
