--- a/style/partials/_baserules.scss
+++ b/style/partials/_baserules.scss
@@ -15,8 +15,7 @@
 }
 
 body {
-    display: grid;
-    grid-template-columns: 100%;
+    width: 100%;
 }
 
 header, footer {
@@ -26,7 +25,7 @@ header, footer {
 
 main {
     margin-top: 95px;
-    width: 100vw;
+    width: 100%;
 }
 section {
 
@@ -59,5 +58,6 @@ input:focus{
 button {
     width: 127px;
     height: 50px;
+    border: 1px solid $first-color;
     border-radius: 25px;
 }
