--- a/style/style.css
+++ b/style/style.css
@@ -232,6 +232,17 @@ section.results {
       grid-template-rows: 132.5px 132.5px 132.5px 132.5px 132.5px 132.5px;
       grid-row-gap: 10.5px;
       padding: 10px; }
+      section.results div.ctn-results div.root div.error-results {
+        display: flex;
+        flex-direction: column;
+        padding: 20px 10%;
+        text-align: center; }
+        section.results div.ctn-results div.root div.error-results p {
+          font-size: 22px;
+          font-family: "Montserrat", sans-serif;
+          color: #50E3C2;
+          line-height: 25px;
+          font-weight: 700; }
       section.results div.ctn-results div.root div.ctn-gif {
         width: 100%;
         position: relative; }
